# pricera

./: .pre-commit-config.yaml  pyproject.toml  scrapy.cfg
.github/workflows/: ci.yml  tests.yml
common/: pyproject.toml
common/pricera/common/: __init__.py  base_scrapy_spider.py  etl_pipeline.py  mongodb.py  testing_utilities.py  utilities.py
common/pricera/common/collectors/: base_collector.py  consumers.py
common/pricera/common/crawler/middleware/: item_pipeline.py
common/pricera/common/logger/: __init__.py  logging.json  logging.yaml
common/pricera/common/middlewares/: __init__.py  s3_pipeline.py
common/pricera/common/parser/: pricera_base_parser.py
common/pricera/common/pipelines/: __init__.py  collector_mapping.py  crawler_launcher.py  crawler_pipeline.py  launcher.py  parser_launcher.py  parser_pipeline.py  utilities.py
common/pricera/common/scrapy/: __init__.py  base_spider.py  settings.py
common/pricera/common/scrapy/download_handlers/: __init__.py  impersonate_download_handler.py
common/pricera/common/scrapy/item_pipelines/: __init__.py  s3_pipeline.py
common/pricera/common/scrapy/middlewares/: __init__.py
common/pricera/common/tests/: test_file_based_message_consumer.py  test_get_file_args.py  test_url_with_hash.py
common/pricera/common/tests/messages/: test_message_1.json
crawler/: pyproject.toml
crawler/pricera/crawler/: __init__.py  crawler_pipeline.py
hotline/pricera/hotline/: hotline_item_card_collector.py
models/pricera/models/: __init__.py
parser/: pyproject.toml
rozetka/: pyproject.toml
(+29 files in other folders)
