[tool.poetry]
name = "pricera"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    "TarasIvaniuk <181894998+Taras-d3v@users.noreply.github.com>"
]

[tool.poetry.dependencies]
pricera-common = {path = "common", develop = true}
pricera-models = {path = "models", develop = true}
pricera-crawler = {path = "crawler", develop = true}
pricera-parser = {path = "parser", develop = true}

pricera-hotline = {path = "hotline", develop = true}
python = "3.13.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
