[tool.poetry]
name = "pricera.common"
version = "0.1.0"
description = ""
authors = []
packages=[
    {include="pricera/common/*"}
]

[tool.poetry.dependencies]
python = ">=3.13"
boto3 = "^1.40.50"
pika = "^1.3.2"
scrapy = "^2.13.3"
pydantic = "^2.12.3"
lxml = "^6.0.2"
beautifulsoup4 = "^4.14.2"
pytest = "^9.0.1"
scrapy-impersonate = "^1.6.1"
botocore = "^1.41.2"
colorlog = "^6.10.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
